--- a/MaterialDesignLibrary/src/main/res/values/colors.xml
+++ b/MaterialDesignLibrary/src/main/res/values/colors.xml
@@ -4,63 +4,41 @@
     <!-- =       Material Design Buttons            = -->
     <!-- ========================================== -->
 
-    <!--<color name="md_button_disabled_text">#EBC7BE</color>-->
-    <!--<color name="md_button_pressed_text">#000000</color>-->
-    <!--<color name="md_button_normal_text">#FFFFFF</color>-->
-
-    <!--<color name="md_button_pressed_start">#822300</color>-->
-    <!--<color name="md_button_pressed_end">#D7530F</color>-->
-    <!--<color name="md_button_pressed_start_multi">#E68E15</color>-->
-    <!--<color name="md_button_pressed_end_multi">#FDD401</color>-->
-    <!--<color name="md_button_pressed_border">#862501</color>-->
-
-    <!--<color name="md_button_disabled_start">#EAB6A6</color>-->
-    <!--<color name="md_button_disabled_end">#C9AB9D</color>-->
-    <!--<color name="md_button_disabled_start_multi">#F2E08F</color>-->
-    <!--<color name="md_button_disabled_end_multi">#EAC896</color>-->
-    <!--<color name="md_button_disabled_border">#EBC7BE</color>-->
-
-    <!--<color name="md_button_normal_start">#DF5A20</color>-->
-    <!--<color name="md_button_normal_end">#904321</color>-->
-    <!--<color name="md_button_normal_start_multi">#FDD401</color>-->
-    <!--<color name="md_button_normal_end_multi">#E68E15</color>-->
-    <!--<color name="md_button_normal_border">#862501</color>-->
-
     <color name="md_button_disabled_text">#614438</color>
     <color name="md_button_pressed_text">#936855</color>
     <color name="md_button_normal_text">#FFFFFF</color>
 
-    <color name="md_button_pressed_start">#AB924D</color>
-    <color name="md_button_pressed_end">#DEBD64</color>
-    <color name="md_button_pressed_border">#614438</color>
+    <color name="md_default_pressed_start">#989898</color>
+    <color name="md_default_pressed_end">#FFFFFF</color>
+    <color name="md_default_pressed_border">#AAA</color>
 
-    <color name="md_button_disabled_start">#DEBD64</color>
-    <color name="md_button_disabled_end">#AB924D</color>
-    <color name="md_button_disabled_border">#614438</color>
+    <color name="md_default_disabled_start">#969696</color>
+    <color name="md_default_disabled_end">#454545</color>
+    <color name="md_default_disabled_border">#AAA</color>
 
-    <color name="md_button_normal_start">#DEBD64</color>
-    <color name="md_button_normal_end">#AB924D</color>
-    <color name="md_button_normal_border">#614438</color>
+    <color name="md_default_normal_start">#989898</color>
+    <color name="md_default_normal_end">#FFFFFF</color>
+    <color name="md_default_normal_border">#AAA</color>
 
     <!-- ========================================== -->
     <!-- =       Red palette                      = -->
     <!-- ========================================== -->
 
-    <color name="md_red_button_disabled_text">#541713</color>
-    <color name="md_red_button_pressed_text">#000000</color>
-    <color name="md_red_button_normal_text">#FFFFFF</color>
+    <color name="md_red_disabled_text">#541713</color>
+    <color name="md_red_pressed_text">#000000</color>
+    <color name="md_red_normal_text">#FFFFFF</color>
 
-    <color name="md_red_button_pressed_start">#6E1E18</color>
-    <color name="md_red_button_pressed_end">#E03D31</color>
-    <color name="md_red_button_pressed_border">#3B100D</color>
+    <color name="md_red_pressed_start">#6E1E18</color>
+    <color name="md_red_pressed_end">#E03D31</color>
+    <color name="md_red_pressed_border">#3B100D</color>
 
-    <color name="md_red_button_disabled_start">#FFCDD2</color>
-    <color name="md_red_button_disabled_end">#EBBCC0</color>
-    <color name="md_red_button_disabled_border">#FFCDD2</color>
+    <color name="md_red_disabled_start">#FFCDD2</color>
+    <color name="md_red_disabled_end">#EBBCC0</color>
+    <color name="md_red_disabled_border">#FFCDD2</color>
 
-    <color name="md_red_button_normal_start">#E03D31</color>
-    <color name="md_red_button_normal_end">#6E1E18</color>
-    <color name="md_red_button_normal_border">#3B100D</color>
+    <color name="md_red_normal_start">#E03D31</color>
+    <color name="md_red_normal_end">#6E1E18</color>
+    <color name="md_red_normal_border">#3B100D</color>
 
     <color name="md_red_shadow">#85EBBCC0</color>
 
@@ -68,21 +46,21 @@
     <!-- =       Pink palette                    = -->
     <!-- ========================================== -->
 
-    <color name="md_pink_button_disabled_text">#690E2C</color>
-    <color name="md_pink_button_pressed_text">#000000</color>
-    <color name="md_pink_button_normal_text">#FFFFFF</color>
+    <color name="md_pink_disabled_text">#690E2C</color>
+    <color name="md_pink_pressed_text">#000000</color>
+    <color name="md_pink_normal_text">#FFFFFF</color>
 
-    <color name="md_pink_button_pressed_start">#821137</color>
-    <color name="md_pink_button_pressed_end">#E91E63</color>
-    <color name="md_pink_button_pressed_border">#690E2C</color>
+    <color name="md_pink_pressed_start">#821137</color>
+    <color name="md_pink_pressed_end">#E91E63</color>
+    <color name="md_pink_pressed_border">#690E2C</color>
 
-    <color name="md_pink_button_disabled_start">#F8BBD0</color>
-    <color name="md_pink_button_disabled_end">#AB808F</color>
-    <color name="md_pink_button_disabled_border">#F8BBD0</color>
+    <color name="md_pink_disabled_start">#F8BBD0</color>
+    <color name="md_pink_disabled_end">#AB808F</color>
+    <color name="md_pink_disabled_border">#F8BBD0</color>
 
-    <color name="md_pink_button_normal_start">#E91E63</color>
-    <color name="md_pink_button_normal_end">#821137</color>
-    <color name="md_pink_button_normal_border">#690E2C</color>
+    <color name="md_pink_normal_start">#E91E63</color>
+    <color name="md_pink_normal_end">#821137</color>
+    <color name="md_pink_normal_border">#690E2C</color>
 
     <color name="md_pink_shadow">#85AB808F</color>
 
@@ -156,20 +134,20 @@
     <!-- =       Blue palette                   = -->
     <!-- ========================================== -->
 
-    <color name="md_blue_button_disabled_text">#14568C</color>
-    <color name="md_blue_button_pressed_text">#000000</color>
-    <color name="md_blue_button_normal_text">#FFFFFF</color>
+    <color name="md_blue_disabled_text">#14568C</color>
+    <color name="md_blue_pressed_text">#000000</color>
+    <color name="md_blue_normal_text">#FFFFFF</color>
 
-    <color name="md_blue_button_pressed_start">#1766A6</color>
-    <color name="md_blue_button_pressed_end">#2196F3</color>
-    <color name="md_blue_button_pressed_border">#104673</color>
+    <color name="md_blue_pressed_start">#1766A6</color>
+    <color name="md_blue_pressed_end">#2196F3</color>
+    <color name="md_blue_pressed_border">#104673</color>
 
-    <color name="md_blue_button_disabled_start">#BBDEFB</color>
-    <color name="md_blue_button_disabled_end">#829AAD</color>
-    <color name="md_blue_button_disabled_border">#BBDEFB</color>
+    <color name="md_blue_disabled_start">#BBDEFB</color>
+    <color name="md_blue_disabled_end">#829AAD</color>
+    <color name="md_blue_disabled_border">#BBDEFB</color>
 
-    <color name="md_blue_button_normal_start">#2196F3</color>
-    <color name="md_blue_button_normal_end">#1766A6</color>
+    <color name="md_blue_normal_start">#2196F3</color>
+    <color name="md_blue_normal_end">#1766A6</color>
     <color name="md_blue_button_normal_border">#104673</color>
 
     <color name="md_blue_shadow">#85829AAD</color>
