--- a/MaterialDesignLibrary/src/main/res/drawable/md_green_button_selector_linear_gradient.xml
+++ b/MaterialDesignLibrary/src/main/res/drawable/md_green_button_selector_linear_gradient.xml
@@ -3,37 +3,32 @@
 
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-
             <gradient android:angle="270" android:endColor="@color/md_green_button_disabled_end" android:startColor="@color/md_green_button_disabled_start" />
 
-            <corners android:radius="@dimen/md_button_corner_radius" />
+            <stroke android:width="@dimen/md_stroke_width" android:color="@color/md_green_button_disabled_border" />
 
-            <stroke android:width="@dimen/md_button_stroke_width" android:color="@color/md_green_button_disabled_border" />
+            <corners android:radius="@dimen/md_corner_radius" />
 
         </shape>
     </item>
 
     <item android:state_pressed="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
+        <shape android:shape="rectangle">
             <gradient android:angle="270" android:endColor="@color/md_green_button_pressed_end" android:startColor="@color/md_green_button_pressed_start" />
 
-            <corners android:radius="@dimen/md_button_corner_radius" />
+            <corners android:radius="@dimen/md_corner_radius" />
 
-            <stroke android:width="@dimen/md_button_stroke_width" android:color="@color/md_green_button_pressed_border" />
-
+            <stroke android:width="@dimen/md_stroke_width" android:color="@color/md_green_button_pressed_border" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
+            <gradient android:angle="90" android:endColor="@color/md_green_button_normal_end" android:startColor="@color/md_green_button_normal_start" />
 
-            <gradient android:angle="270" android:endColor="@color/md_green_button_normal_end" android:startColor="@color/md_green_button_normal_start" />
+            <corners android:radius="@dimen/md_corner_radius" />
 
-            <corners android:radius="@dimen/md_button_corner_radius" />
-
-            <stroke android:width="@dimen/md_button_stroke_width" android:color="@color/md_green_button_normal_border" />
-
+            <stroke android:width="@dimen/md_stroke_width" android:color="@color/md_green_button_normal_border" />
         </shape>
     </item>
 
