--- a/MaterialDesignLibrary/src/main/res/drawable/md_pink_selector_radius_gradient.xml
+++ b/MaterialDesignLibrary/src/main/res/drawable/md_pink_selector_radius_gradient.xml
@@ -9,15 +9,15 @@
         <shape android:shape="rectangle">
 
             <gradient
-                android:startColor="@color/md_pink_button_disabled_end"
-                android:endColor="@color/md_pink_button_disabled_start"
+                android:startColor="@color/md_pink_disabled_end"
+                android:endColor="@color/md_pink_disabled_start"
                 android:gradientRadius="50"
                 android:centerY="1"
                 android:type="radial"/>
 
-            <corners android:radius="@dimen/md_button_corner_radius" />
+            <corners android:radius="@dimen/md_corner_radius" />
 
-            <stroke android:width="@dimen/md_button_stroke_width" android:color="@color/md_pink_button_disabled_border" />
+            <stroke android:width="@dimen/md_stroke_width" android:color="@color/md_pink_disabled_border" />
 
         </shape>
     </item>
@@ -27,15 +27,15 @@
 
             <gradient
                 android:angle="270"
-                android:startColor="@color/md_pink_button_pressed_start"
-                android:endColor="@color/md_pink_button_pressed_end"
+                android:startColor="@color/md_pink_pressed_start"
+                android:endColor="@color/md_pink_pressed_end"
                 android:gradientRadius="50"
                 android:centerY="0"
                 android:type="radial" />
 
-            <corners android:radius="@dimen/md_button_corner_radius" />
+            <corners android:radius="@dimen/md_corner_radius" />
 
-            <stroke android:width="@dimen/md_button_stroke_width" android:color="@color/md_pink_button_pressed_border" />
+            <stroke android:width="@dimen/md_stroke_width" android:color="@color/md_pink_pressed_border" />
 
         </shape>
 
@@ -46,15 +46,15 @@
 
             <gradient
                 android:angle="270"
-                android:startColor="@color/md_pink_button_normal_end"
-                android:endColor="@color/md_pink_button_normal_start"
+                android:startColor="@color/md_pink_normal_end"
+                android:endColor="@color/md_pink_normal_start"
                 android:gradientRadius="50"
                 android:centerY="1"
                 android:type="radial" />
 
-            <corners android:radius="@dimen/md_button_corner_radius" />
+            <corners android:radius="@dimen/md_corner_radius" />
 
-            <stroke android:width="@dimen/md_button_stroke_width" android:color="@color/md_pink_button_normal_border" />
+            <stroke android:width="@dimen/md_stroke_width" android:color="@color/md_pink_normal_border" />
 
         </shape>
     </item>
