--- a/MaterialDesignLibrary/src/main/res/values/switch.xml
+++ b/MaterialDesignLibrary/src/main/res/values/switch.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="SlidingToggleSwitch">
-        <attr name="android:textColor" />
+    <declare-styleable name="ToggleSwitch">
         <attr name="onText" format="integer" />
         <attr name="offText" format="color" />
         <attr name="onTextColor" format="color" />
