--- a/MaterialDesignExample/src/main/res/layout/fragment_switch_indigo_blue.xml
+++ b/MaterialDesignExample/src/main/res/layout/fragment_switch_indigo_blue.xml
@@ -19,10 +19,10 @@
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:enabled="false"
-            app:offBackground="@drawable/md_indigo_selector_linear_gradient"
-            app:onBackground="@drawable/md_indigo_selector_linear_gradient"
-            app:offText="@string/str_sliding_touch_switch_right"
-            app:onText="@string/str_sliding_touch_switch_left"
+            app:tg_offBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_offText="@string/str_sliding_touch_switch_right"
+            app:tg_onText="@string/str_sliding_touch_switch_left"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -34,10 +34,10 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            app:offBackground="@drawable/md_indigo_selector_linear_gradient"
-            app:onBackground="@drawable/md_blue_selector_linear_gradient"
-            app:offText="@string/str_indigo"
-            app:onText="@string/str_blue"
+            app:tg_offBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_blue_selector_linear_gradient"
+            app:tg_offText="@string/str_indigo"
+            app:tg_onText="@string/str_blue"
             app:sl_animEnabled="false"
             app:sl_duration="50"
             app:sl_dx='5dp'
@@ -52,14 +52,15 @@
             android:layout_weight="1"
             android:duration="1000"
             android:checked="false"
-            app:offBackground="@drawable/md_blue_selector_linear_gradient"
-            app:onBackground="@drawable/md_indigo_selector_linear_gradient"
-            app:offText="@string/str_blue"
-            app:onText="@string/str_indigo"
+            app:tg_offBackground="@drawable/md_blue_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_offText="@string/str_blue"
+            app:tg_onText="@string/str_indigo"
+            app:tg_mode="switch_background"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
-            app:sl_shadow="@color/md_blue_shadow" />
+            app:sl_shadow="@color/md_blue_shadow"/>
 
     </LinearLayout>
 
@@ -75,9 +76,9 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            app:sliderBackground="@drawable/md_indigo_selector_linear_gradient"
             android:checked="false"
             android:enabled="false"
+            app:tg_sliderBackground="@drawable/md_indigo_selector_linear_gradient"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -89,7 +90,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            app:sliderBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_sliderBackground="@drawable/md_indigo_selector_linear_gradient"
             app:sl_animEnabled="false"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -102,9 +103,9 @@
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:duration="1000"
-            app:offBackground="@drawable/md_indigo_selector_linear_gradient"
-            app:onBackground="@drawable/md_indigo_selector_linear_gradient"
-            app:sliderBackground="@drawable/md_blue_selector_linear_gradient"
+            app:tg_offBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_indigo_selector_linear_gradient"
+            app:tg_sliderBackground="@drawable/md_blue_selector_linear_gradient"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
