--- a/MaterialDesignExample/src/main/res/layout/fragment_switch_orange_deeporange.xml
+++ b/MaterialDesignExample/src/main/res/layout/fragment_switch_orange_deeporange.xml
@@ -19,10 +19,10 @@
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:enabled="false"
-            app:offBackground="@drawable/md_orange_selector_linear_gradient"
-            app:onBackground="@drawable/md_orange_selector_linear_gradient"
-            app:offText="@string/str_sliding_touch_switch_right"
-            app:onText="@string/str_sliding_touch_switch_left"
+            app:tg_offBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_offText="@string/str_sliding_touch_switch_right"
+            app:tg_onText="@string/str_sliding_touch_switch_left"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -34,10 +34,10 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            app:offBackground="@drawable/md_orange_selector_linear_gradient"
-            app:onBackground="@drawable/md_deeporange_selector_linear_gradient"
-            app:offText="@string/str_orange"
-            app:onText="@string/str_deeporange"
+            app:tg_offBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_deeporange_selector_linear_gradient"
+            app:tg_offText="@string/str_orange"
+            app:tg_onText="@string/str_deeporange"
             app:sl_animEnabled="false"
             app:sl_duration="50"
             app:sl_dx='5dp'
@@ -52,10 +52,11 @@
             android:layout_weight="1"
             android:duration="1000"
             android:checked="false"
-            app:offBackground="@drawable/md_deeporange_selector_linear_gradient"
-            app:onBackground="@drawable/md_orange_selector_linear_gradient"
-            app:offText="@string/str_deeporange"
-            app:onText="@string/str_orange"
+            app:tg_offBackground="@drawable/md_deeporange_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_offText="@string/str_deeporange"
+            app:tg_onText="@string/str_orange"
+            app:tg_mode="switch_background"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -75,9 +76,9 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            app:sliderBackground="@drawable/md_orange_selector_linear_gradient"
             android:checked="false"
             android:enabled="false"
+            app:tg_sliderBackground="@drawable/md_orange_selector_linear_gradient"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -89,7 +90,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            app:sliderBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_sliderBackground="@drawable/md_orange_selector_linear_gradient"
             app:sl_animEnabled="false"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
@@ -102,9 +103,9 @@
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:duration="1000"
-            app:offBackground="@drawable/md_orange_selector_linear_gradient"
-            app:onBackground="@drawable/md_orange_selector_linear_gradient"
-            app:sliderBackground="@drawable/md_deeporange_selector_linear_gradient"
+            app:tg_offBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_onBackground="@drawable/md_orange_selector_linear_gradient"
+            app:tg_sliderBackground="@drawable/md_deeporange_selector_linear_gradient"
             app:sl_duration="50"
             app:sl_dx='5dp'
             app:sl_dy='5dp'
