--- a/MaterialDesignExample/src/main/res/layout/fragment_checkbox.xml
+++ b/MaterialDesignExample/src/main/res/layout/fragment_checkbox.xml
@@ -61,26 +61,40 @@
             app:cb_circle_color="#9C27B0"/>
 
         <ru.gdo.android.library.materialdesign.widget.MDTouchCheckBox
+            android:id="@+id/tcb"
             android:layout_gravity="center_horizontal"
             android:layout_width="320dp"
-            android:paddingLeft="6dp"
-            android:paddingTop="6dp"
-            android:layout_height="220dp"/>
+            android:layout_height="220dp"
+            android:checked="true"
+            android:duration="500"
+            />
 
         <ru.gdo.android.library.materialdesign.widget.MDTouchCheckBox
             android:layout_gravity="center_horizontal"
-            android:layout_width="220dp"
-            android:paddingLeft="6dp"
-            android:paddingTop="6dp"
-            android:layout_height="320dp"/>
+            android:layout_width="320dp"
+            android:layout_height="220dp"
+            android:checked="false"
+            app:tcb_mode="circle"
+            android:duration="100"
+            app:tcb_flagwidth="5dp"
+            app:tcb_borderwidth="5dp"
+            app:tcb_flagcolor="#ad45d3"
+            app:tcb_checkedcolor="#009688"
+            app:tcb_uncheckedcolor="#4CAF50"
+            app:tcb_checkedbordercolor="#4CAF50"
+            app:tcb_uncheckedbordercolor="#009688"
 
-        <ru.gdo.android.library.materialdesign.widget.MDTouchCheckBox
-            android:layout_gravity="center_horizontal"
-            android:layout_width="100dp"
-            android:paddingLeft="6dp"
-            android:paddingTop="6dp"
-            android:layout_height="100dp"/>
+            />
 
+        <CheckBox
+            android:id="@+id/cb"
+            android:layout_width="120dp"
+            android:layout_height="120dp" />
+
+        <CheckBox
+            android:id="@+id/cb2"
+            android:layout_width="120dp"
+            android:layout_height="120dp" />
 
         <!--<include layout="@layout/fragment_button_bluegrey_orange" />-->
 
